# physEng

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
cmake/: FindGMock.cmake
include/collision/: ICollisionDetection.h  SphereCollisionDetection.h
include/renderer/: IRenderer.h
include/rigidbody/: IRigidbody.h  Rigidbody.h  SphericRigidbody.h
src/: CMakeLists.txt  main.cpp  sandbox.cpp
src/physics/rigidbody/: Rigidbody.cpp  Rigidbody.h  SphericRigidbody.cpp  SphericRigidbody.h
src/renderer/: OpenGLRenderer.cpp
src/utils/: VectorUtils.h
tests/unit/: CMakeLists.txt  test_OpenGLRenderer.cpp  test_Rigidbody.cpp  test_SphereCollisionDetection.cpp  test_SphericRigidbody.cpp
